# metric_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: class_names.json  config.yaml
configs/experiments/: pointnet2_ce_only_newdata.yaml  pointnet2_ce_supcon_newdata.yaml  pointnet_ce_only_newdata.yaml  pointnet_ce_supcon_newdata.yaml  pointnext_ce_only_newdata.yaml  pointnext_ce_supcon_newdata.yaml
raw_pcd_dataset/: class_mapping.json  sample_mapping.json
scripts/: benchmark_inference.py  build_gallery.py  build_prototypes.py  check_class_coverage.py  compare_backbones.py  compare_embedding_reports.py  compare_runs.py  evaluate.py  evaluate_embeddings.py  evaluate_ood.py  evaluate_pseudo_ood.py  evaluate_retrieval.py  export_inference_bundle.py  extract_embeddings.py  final_infer.py  generate_final_report.py  generate_limited_deployment_report.py  infer.py  inspect_pcd_sample.py  organize_dataset.py  prepare_pcd_dataset.py  rebuild_split.py  run_full_regression.py  search_threshold.py  train.py  validate_dataset.py  visualize_embeddings.py
src/datasets/: pointcloud_dataset.py  samplers.py
src/losses/: __init__.py  metric_losses.py
src/metrics/: classification_metrics.py  embedding_metrics.py
src/models/: metric_model.py  model_factory.py  openpoints_adapter.py  pointnet.py  pointnet2.py
src/utils/: checkpoint.py  config.py  html_report.py  logger.py  pcd_io.py  pointcloud_ops.py  seed.py
