[project]
name = "pointcloud-metric-learning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0",
    "numpy",
    "pyyaml",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "open3d",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
